--- a/HTML (Forms).html
+++ b/HTML (Forms).html
@@ -12,7 +12,12 @@
     <form action="/tacos">
       <p>
         <label for="username">Enter a Username:</label>
-        <input type="text" placeholder="Username" id="username" />
+        <input
+          type="text"
+          placeholder="Username"
+          id="username"
+          name="username"
+        />
         <!-- if you click words you can type in that box, "for" and "id" gives a connection b/t each other -->
       </p>
       <p>
@@ -22,18 +27,45 @@
       </p>
       <p>
         <label for="color">Select a color:</label>
-        <input type="color" id="color" />
+        <input type="color" id="color" name="color" />
       </p>
       <div>
         <label>
           Enter a number:
-          <input type="number" placeholder="enter a number" />
+          <input type="number" placeholder="enter a number" name="num" />
         </label>
         <!-- another way -->
       </div>
       <div><br /><button>SUBMIT!</button></div>
       <!-- take you to the "action" (defalut behavior is *submit*)-->
       <div><br /><button type="button">Just a BUTTON</button></div>
+    </form>
+    <hr />
+    <br />
+    <h3>Search Reddit</h3>
+    <form action="https://www.reddit.com/search">
+      <input type="text" name="q" />
+      <!-- you can't use name="q" because you need to use what reddit used -->
+      <button>Search Reddit</button>
+    </form>
+    <br />
+    <h3>Search Google</h3>
+    <form action="https://www.google.com/search">
+      <input type="text" name="q" />
+      <button>Search Google</button>
+    </form>
+    <br />
+    <h3>Search Youtube</h3>
+    <form action="https://www.youtube.com/results">
+      <input type="text" name="search_query" />
+      <button>Search Youtube</button>
+      <!-- if you don't have the button, you still can hit enter to submit that form/request -->
+    </form>
+
+    <h2>More Inputs</h2>
+    <form action="/birds">
+      <input type="checkbox" name="agree_tos" id="agree" />
+      <label for="agree">I agree to everything</label>
     </form>
   </body>
 </html>
