--- a/CSS/CSS-Intro.html
+++ b/CSS/CSS-Intro.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="my_style.css" />
+    <title>CSS Demo</title>
+    <link rel="stylesheet" href="CSS-Intro.css" />
   </head>
   <body>
+    <h1>CSS Demo</h1>
     <h2>First H2</h2>
     <h2>Second H2</h2>
     <h2>Third H2</h2>
