--- a/CSS/CSS-Selector.html
+++ b/CSS/CSS-Selector.html
@@ -12,7 +12,8 @@
     <nav>
       <label for="search">Search</label>
       <input type="text" placeholder="search" id="search" />
-      <input type="password" placeholder="password" />
+      <label for="password">Password</label>
+      <input type="password" placeholder="password" id="password" />
       <button>Log In</button>
       <button id="signup">Sign Up</button>
     </nav>
