--- a/CSS/CSS-FlexBox.html
+++ b/CSS/CSS-FlexBox.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="CSS-FlexBox.css" />
   </head>
 
   <body>
