css price panel project

--- a/CSS/CSS-PricePanelProject/CSS-PricePanelProject.html
+++ b/CSS/CSS-PricePanelProject/CSS-PricePanelProject.html
@@ -19,6 +19,7 @@
         <ul class="plan-features">
           <li class="plan-item">Sleeps after 30 mins of inactivity</li>
           <li class="plan-item">1 hr max using length per day</li>
+          <li class="plan-item">Upto 1 person</li>
         </ul>
         <span class="plan-price">Free</span>
         <a href="#/" class="plan-button">Sign Up</a>
@@ -30,7 +31,7 @@
         <ul class="plan-features">
           <li class="plan-item">Never sleeps feature</li>
           <li class="plan-item">No ADs when using</li>
-          <li class="plan-item">Allow multiple users launch together</li>
+          <li class="plan-item">Allow multiple users</li>
         </ul>
         <span class="plan-price">CA$150 /yr</span>
         <a href="#/" class="plan-button">7-day Free Trial</a>
