--- a/CSS/CSS-PricePanelProject/CSS-PricePanelProject.html
+++ b/CSS/CSS-PricePanelProject/CSS-PricePanelProject.html
@@ -12,42 +12,56 @@
     <link rel="stylesheet" href="CSS-PricePanelProject.css" />
   </head>
   <body>
-    <div class="panel">
-      <div class="plan">
-        <img src="icons/icon1.png" alt="picture 1" class="plan-img" />
-        <h2 class="plan-header">Personal User Plan</h2>
-        <ul class="plan-features">
-          <li class="plan-item">Sleeps after 30 mins of inactivity</li>
-          <li class="plan-item">1 hr max using length per day</li>
-          <li class="plan-item">Upto 1 person</li>
+    <header>
+      <nav class="nav">
+        <div class="logo">logo</div>
+        <ul>
+          <li><a href="#/">Home</a></li>
+          <li><a href="#/">Service</a></li>
+          <li><a href="#/">Plans</a></li>
+          <li><a href="#/">Contact</a></li>
         </ul>
-        <span class="plan-price">Free</span>
-        <a href="#/" class="plan-button">Sign Up</a>
-      </div>
+      </nav>
+    </header>
 
-      <div class="plan">
-        <img src="icons/icon2.png" alt="picture 2" class="plan-img" />
-        <h2 class="plan-header">Family Share Plan</h2>
-        <ul class="plan-features">
-          <li class="plan-item">Never sleeps feature</li>
-          <li class="plan-item">No ADs when using</li>
-          <li class="plan-item">Allow multiple users</li>
-        </ul>
-        <span class="plan-price">CA$150 /yr</span>
-        <a href="#/" class="plan-button">7-day Free Trial</a>
-      </div>
+    <main>
+      <section class="panel">
+        <div class="plan">
+          <img src="icons/icon1.png" alt="picture 1" class="plan-img" />
+          <h2 class="plan-header">Personal User Plan</h2>
+          <ul class="plan-features">
+            <li class="plan-item">Sleeps after 30 mins of inactivity</li>
+            <li class="plan-item">1 hr max using length per day</li>
+            <li class="plan-item">Upto 1 person</li>
+          </ul>
+          <span class="plan-price">Free</span>
+          <a href="#/" class="plan-button">Sign Up</a>
+        </div>
 
-      <div class="plan">
-        <img src="icons/icon3.png" alt="picture 3" class="plan-img" />
-        <h2 class="plan-header">Business Advanced Plan</h2>
-        <ul class="plan-features">
-          <li class="plan-item">7*24 online customer service</li>
-          <li class="plan-item">Advanced features for companies</li>
-          <li class="plan-item">Simple horizontal scalability</li>
-        </ul>
-        <span class="plan-price">CA$600 /yr</span>
-        <a href="#/" class="plan-button">7-day Free Trail</a>
-      </div>
-    </div>
+        <div class="plan">
+          <img src="icons/icon2.png" alt="picture 2" class="plan-img" />
+          <h2 class="plan-header">Family Share Plan</h2>
+          <ul class="plan-features">
+            <li class="plan-item">Never sleeps feature</li>
+            <li class="plan-item">No ADs when using</li>
+            <li class="plan-item">Allow multiple users</li>
+          </ul>
+          <span class="plan-price">CA$150 /yr</span>
+          <a href="#/" class="plan-button">7-day Free Trial</a>
+        </div>
+
+        <div class="plan">
+          <img src="icons/icon3.png" alt="picture 3" class="plan-img" />
+          <h2 class="plan-header">Business Advanced Plan</h2>
+          <ul class="plan-features">
+            <li class="plan-item">7*24 online customer service</li>
+            <li class="plan-item">Advanced features for companies</li>
+            <li class="plan-item">Simple horizontal scalability</li>
+          </ul>
+          <span class="plan-price">CA$600 /yr</span>
+          <a href="#/" class="plan-button">7-day Free Trail</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
