--- a/JavaScript/JS-DOM/JS-ManipulatingAttributes.html
+++ b/JavaScript/JS-DOM/JS-ManipulatingAttributes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM Manipulation</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="JS-ManipulatingAttributes.css" />
   </head>
 
   <body>
