--- a/JavaScript/JS-DOM/JS-ManipulatingAttributes.html
+++ b/JavaScript/JS-DOM/JS-ManipulatingAttributes.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Silkie Chickens</h1>
+    <h1 style="color: magenta">Silkie Chickens</h1>
     <img
       id="banner"
       src="https://images.unsplash.com/photo-1563281577-a7be47e20db9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80"
@@ -156,6 +156,10 @@
 
     <input type="text" />
 
-    <script src="app.js"></script>
+    <!-- //how to select using the type attribute: -->
+    <label>Delete All</label>
+    <input type="checkbox" id="scales" name="scales" checked />
+
+    <script src="JS-ManipulatingAttributes.js"></script>
   </body>
 </html>
