--- a/JavaScript/JS-ScoreKeeper.html
+++ b/JavaScript/JS-ScoreKeeper.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Score Keeper</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
+    />
 
     <style>
       .winner {
@@ -16,18 +20,67 @@
     </style>
   </head>
   <body>
-    <h1><span id="p1Display">0</span> to <span id="p2Display">0</span></h1>
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-half is-offset-one-quarter">
+            <div class="card">
+              <div class="card-image">
+                <figure class="image is-2by1">
+                  <img
+                    src="https://images.unsplash.com/photo-1534158914592-062992fbe900?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3784&q=80"
+                    alt=""
+                  />
+                </figure>
+              </div>
+            </div>
+            <header class="card-header">
+              <p class="card-header-title">Ping Pong Score Keeper</p>
+            </header>
 
-    <select name="" id="playto">
-      <option value="5">5</option>
-      <option value="7">7</option>
-      <option value="9">9</option>
-      <option value="11">11</option>
-    </select>
+            <div class="card-content">
+              <div class="content">
+                <h1 title is-1>
+                  <span id="p1Display">0</span> to <span id="p2Display">0</span>
+                </h1>
 
-    <button id="p1Button">Player 1 +1</button>
-    <button id="p2Button">Player 2 +1</button>
-    <button id="resetButton">Reset Score</button>
+                <label for="playto" class="label is-large is-inline"
+                  >Playing</label
+                >
+
+                <div class="select is-rounded">
+                  <select name="" id="playto">
+                    <option value="5">5</option>
+                    <option value="7">7</option>
+                    <option value="9">9</option>
+                    <option value="11">11</option>
+                  </select>
+                </div>
+                <label for="playto" class="label is-large is-inline"
+                  >Rounds</label
+                >
+                <p class="subtitle">Use the buttons below to keep score</p>
+              </div>
+            </div>
+
+            <footer class="card-footer">
+              <button id="p1Button" class="is-primary button card-footer-item">
+                Player1 +1
+              </button>
+              <button id="p2Button" class="is-info button card-footer-item">
+                Player2 +1
+              </button>
+              <button
+                id="resetButton"
+                class="is-danger button card-footer-item"
+              >
+                Reset Score
+              </button>
+            </footer>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="JS-ScoreKeeper.js"></script>
   </body>
